parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     space -> <empty>
Rule 2     space -> SPACES
Rule 3     boolop -> space LTE space
Rule 4     boolop -> space GTE space
Rule 5     boolop -> space < space
Rule 6     boolop -> space > space
Rule 7     boolop -> space = = space
Rule 8     boolop -> space ! = space
Rule 9     boolexp -> VARNAME boolop VARNAME
Rule 10    boolexp -> VARNAME boolop NUMBER
Rule 11    boolexp -> NUMBER boolop VARNAME
Rule 12    boolexp -> NUMBER boolop NUMBER
Rule 13    lhs -> STARS VARNAME
Rule 14    lhs -> VARNAME - > VARNAME
Rule 15    lhs -> VARNAME . VARNAME
Rule 16    rhs -> boolexp
Rule 17    rhs -> lhs
Rule 18    rhs -> VARNAME
Rule 19    rhs -> & VARNAME
Rule 20    rhs -> NUMBER
Rule 21    vardec -> VARNAME SPACES list
Rule 22    vardec -> VARNAME STARS SPACES list
Rule 23    stmt -> vardec
Rule 24    stmt -> lhs space = space rhs
Rule 25    stmt -> VARNAME space = space rhs
Rule 26    stmt -> VARNAME space = space MALLOC ( )
Rule 27    stmt -> READ SPACES VARNAME
Rule 28    stmt -> USE SPACES VARNAME
Rule 29    stmt -> GOTO SPACES NUMBER
Rule 30    stmt -> CALL SPACES VARNAME funcargs
Rule 31    stmt -> IF SPACES boolexp SPACES GOTO SPACES NUMBER
Rule 32    stmt -> IF SPACES VARNAME SPACES GOTO SPACES NUMBER
Rule 33    tac -> nl MAINCODE :
Rule 34    tac -> tac stmtnl stmt
Rule 35    nl -> NEWLINE
Rule 36    stmtnl -> NEWLINE
Rule 37    funcbody -> stmt
Rule 38    funcbody -> funcbody stmtnl stmt
Rule 39    arglist -> VARNAME
Rule 40    arglist -> arglist space , space VARNAME
Rule 41    funcargs -> ( space )
Rule 42    funcargs -> ( space arglist space )
Rule 43    paramlist -> VARNAME SPACES VARNAME
Rule 44    paramlist -> paramlist space , space VARNAME SPACES VARNAME
Rule 45    funcparams -> ( space )
Rule 46    funcparams -> ( space paramlist space )
Rule 47    func -> FUNCS :
Rule 48    func -> func nl VARNAME funcparams spnl { spnl funcbody spnl }
Rule 49    func -> func nl VARNAME funcparams spnl { spnl }
Rule 50    spnl -> space
Rule 51    spnl -> nl
Rule 52    list -> VARNAME space
Rule 53    list -> list , space VARNAME space
Rule 54    declist -> VARNAME SPACES list
Rule 55    declist -> VARNAME STARS SPACES list
Rule 56    declist -> declist nl VARNAME SPACES list
Rule 57    declist -> declist nl VARNAME STARS SPACES list
Rule 58    structs -> spnl STRT : nl
Rule 59    structs -> structs VARNAME space { spnl declist spnl } nl
Rule 60    structs -> structs VARNAME space { spnl } nl
Rule 61    global_sec -> spnl GLOBALS : nl
Rule 62    global_sec -> global_sec vardec nl
Rule 63    global_sec -> global_sec nl
Rule 64    prog -> structs global_sec func tac spnl
Rule 65    prog -> structs func tac spnl

Terminals, with rules where they appear

!                    : 8
&                    : 19
(                    : 26 41 42 45 46
)                    : 26 41 42 45 46
,                    : 40 44 53
-                    : 14
.                    : 15
:                    : 33 47 58 61
<                    : 5
=                    : 7 7 8 24 25 26
>                    : 6 14
CALL                 : 30
FUNCS                : 47
GLOBALS              : 61
GOTO                 : 29 31 32
GTE                  : 4
IF                   : 31 32
LTE                  : 3
MAINCODE             : 33
MALLOC               : 26
NEWLINE              : 35 36
NUMBER               : 10 11 12 12 20 29 31 32
READ                 : 27
SPACES               : 2 21 22 27 28 29 30 31 31 31 32 32 32 43 44 54 55 56 57
STARS                : 13 22 55 57
STRT                 : 58
USE                  : 28
VARNAME              : 9 9 10 11 13 14 14 15 15 18 19 21 22 25 26 27 28 30 32 39 40 43 43 44 44 48 49 52 53 54 55 56 57 59 60
error                : 
{                    : 48 49 59 60
}                    : 48 49 59 60

Nonterminals, with rules where they appear

arglist              : 40 42
boolexp              : 16 31
boolop               : 9 10 11 12
declist              : 56 57 59
func                 : 48 49 64 65
funcargs             : 30
funcbody             : 38 48
funcparams           : 48 49
global_sec           : 62 63 64
lhs                  : 17 24
list                 : 21 22 53 54 55 56 57
nl                   : 33 48 49 51 56 57 58 59 60 61 62 63
paramlist            : 44 46
prog                 : 0
rhs                  : 24 25
space                : 3 3 4 4 5 5 6 6 7 7 8 8 24 24 25 25 26 26 40 40 41 42 42 44 44 45 46 46 50 52 53 53 59 60
spnl                 : 48 48 48 49 49 58 59 59 60 61 64 65
stmt                 : 34 37 38
stmtnl               : 34 38
structs              : 59 60 64 65
tac                  : 34 64 65
vardec               : 23 62

Parsing method: LALR

state 0

    (0) S' -> . prog
    (64) prog -> . structs global_sec func tac spnl
    (65) prog -> . structs func tac spnl
    (58) structs -> . spnl STRT : nl
    (59) structs -> . structs VARNAME space { spnl declist spnl } nl
    (60) structs -> . structs VARNAME space { spnl } nl
    (50) spnl -> . space
    (51) spnl -> . nl
    (1) space -> .
    (2) space -> . SPACES
    (35) nl -> . NEWLINE

    STRT            reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6
    NEWLINE         shift and go to state 7

    prog                           shift and go to state 1
    structs                        shift and go to state 2
    spnl                           shift and go to state 3
    nl                             shift and go to state 4
    space                          shift and go to state 5

state 1

    (0) S' -> prog .



state 2

    (64) prog -> structs . global_sec func tac spnl
    (65) prog -> structs . func tac spnl
    (59) structs -> structs . VARNAME space { spnl declist spnl } nl
    (60) structs -> structs . VARNAME space { spnl } nl
    (61) global_sec -> . spnl GLOBALS : nl
    (62) global_sec -> . global_sec vardec nl
    (63) global_sec -> . global_sec nl
    (47) func -> . FUNCS :
    (48) func -> . func nl VARNAME funcparams spnl { spnl funcbody spnl }
    (49) func -> . func nl VARNAME funcparams spnl { spnl }
    (50) spnl -> . space
    (51) spnl -> . nl
    (1) space -> .
    (2) space -> . SPACES
    (35) nl -> . NEWLINE

    VARNAME         shift and go to state 11
    FUNCS           shift and go to state 12
    GLOBALS         reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6
    NEWLINE         shift and go to state 7

    global_sec                     shift and go to state 8
    func                           shift and go to state 9
    spnl                           shift and go to state 10
    space                          shift and go to state 5
    nl                             shift and go to state 4

state 3

    (58) structs -> spnl . STRT : nl

    STRT            shift and go to state 13


state 4

    (51) spnl -> nl .

    STRT            reduce using rule 51 (spnl -> nl .)
    GLOBALS         reduce using rule 51 (spnl -> nl .)
    $end            reduce using rule 51 (spnl -> nl .)
    }               reduce using rule 51 (spnl -> nl .)
    VARNAME         reduce using rule 51 (spnl -> nl .)
    {               reduce using rule 51 (spnl -> nl .)
    READ            reduce using rule 51 (spnl -> nl .)
    USE             reduce using rule 51 (spnl -> nl .)
    GOTO            reduce using rule 51 (spnl -> nl .)
    CALL            reduce using rule 51 (spnl -> nl .)
    IF              reduce using rule 51 (spnl -> nl .)
    STARS           reduce using rule 51 (spnl -> nl .)


state 5

    (50) spnl -> space .

    STRT            reduce using rule 50 (spnl -> space .)
    GLOBALS         reduce using rule 50 (spnl -> space .)
    $end            reduce using rule 50 (spnl -> space .)
    }               reduce using rule 50 (spnl -> space .)
    VARNAME         reduce using rule 50 (spnl -> space .)
    {               reduce using rule 50 (spnl -> space .)
    READ            reduce using rule 50 (spnl -> space .)
    USE             reduce using rule 50 (spnl -> space .)
    GOTO            reduce using rule 50 (spnl -> space .)
    CALL            reduce using rule 50 (spnl -> space .)
    IF              reduce using rule 50 (spnl -> space .)
    STARS           reduce using rule 50 (spnl -> space .)


state 6

    (2) space -> SPACES .

    STRT            reduce using rule 2 (space -> SPACES .)
    GLOBALS         reduce using rule 2 (space -> SPACES .)
    {               reduce using rule 2 (space -> SPACES .)
    $end            reduce using rule 2 (space -> SPACES .)
    }               reduce using rule 2 (space -> SPACES .)
    VARNAME         reduce using rule 2 (space -> SPACES .)
    ,               reduce using rule 2 (space -> SPACES .)
    NEWLINE         reduce using rule 2 (space -> SPACES .)
    SPACES          reduce using rule 2 (space -> SPACES .)
    =               reduce using rule 2 (space -> SPACES .)
    )               reduce using rule 2 (space -> SPACES .)
    &               reduce using rule 2 (space -> SPACES .)
    NUMBER          reduce using rule 2 (space -> SPACES .)
    STARS           reduce using rule 2 (space -> SPACES .)
    MALLOC          reduce using rule 2 (space -> SPACES .)
    LTE             reduce using rule 2 (space -> SPACES .)
    GTE             reduce using rule 2 (space -> SPACES .)
    <               reduce using rule 2 (space -> SPACES .)
    >               reduce using rule 2 (space -> SPACES .)
    !               reduce using rule 2 (space -> SPACES .)
    READ            reduce using rule 2 (space -> SPACES .)
    USE             reduce using rule 2 (space -> SPACES .)
    GOTO            reduce using rule 2 (space -> SPACES .)
    CALL            reduce using rule 2 (space -> SPACES .)
    IF              reduce using rule 2 (space -> SPACES .)


state 7

    (35) nl -> NEWLINE .

    STRT            reduce using rule 35 (nl -> NEWLINE .)
    GLOBALS         reduce using rule 35 (nl -> NEWLINE .)
    FUNCS           reduce using rule 35 (nl -> NEWLINE .)
    VARNAME         reduce using rule 35 (nl -> NEWLINE .)
    NEWLINE         reduce using rule 35 (nl -> NEWLINE .)
    MAINCODE        reduce using rule 35 (nl -> NEWLINE .)
    SPACES          reduce using rule 35 (nl -> NEWLINE .)
    }               reduce using rule 35 (nl -> NEWLINE .)
    {               reduce using rule 35 (nl -> NEWLINE .)
    READ            reduce using rule 35 (nl -> NEWLINE .)
    USE             reduce using rule 35 (nl -> NEWLINE .)
    GOTO            reduce using rule 35 (nl -> NEWLINE .)
    CALL            reduce using rule 35 (nl -> NEWLINE .)
    IF              reduce using rule 35 (nl -> NEWLINE .)
    STARS           reduce using rule 35 (nl -> NEWLINE .)


state 8

    (64) prog -> structs global_sec . func tac spnl
    (62) global_sec -> global_sec . vardec nl
    (63) global_sec -> global_sec . nl
    (47) func -> . FUNCS :
    (48) func -> . func nl VARNAME funcparams spnl { spnl funcbody spnl }
    (49) func -> . func nl VARNAME funcparams spnl { spnl }
    (21) vardec -> . VARNAME SPACES list
    (22) vardec -> . VARNAME STARS SPACES list
    (35) nl -> . NEWLINE

    FUNCS           shift and go to state 12
    VARNAME         shift and go to state 17
    NEWLINE         shift and go to state 7

    func                           shift and go to state 14
    vardec                         shift and go to state 15
    nl                             shift and go to state 16

state 9

    (65) prog -> structs func . tac spnl
    (48) func -> func . nl VARNAME funcparams spnl { spnl funcbody spnl }
    (49) func -> func . nl VARNAME funcparams spnl { spnl }
    (33) tac -> . nl MAINCODE :
    (34) tac -> . tac stmtnl stmt
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 7

    tac                            shift and go to state 18
    nl                             shift and go to state 19

state 10

    (61) global_sec -> spnl . GLOBALS : nl

    GLOBALS         shift and go to state 20


state 11

    (59) structs -> structs VARNAME . space { spnl declist spnl } nl
    (60) structs -> structs VARNAME . space { spnl } nl
    (1) space -> .
    (2) space -> . SPACES

    {               reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    space                          shift and go to state 21

state 12

    (47) func -> FUNCS . :

    :               shift and go to state 22


state 13

    (58) structs -> spnl STRT . : nl

    :               shift and go to state 23


state 14

    (64) prog -> structs global_sec func . tac spnl
    (48) func -> func . nl VARNAME funcparams spnl { spnl funcbody spnl }
    (49) func -> func . nl VARNAME funcparams spnl { spnl }
    (33) tac -> . nl MAINCODE :
    (34) tac -> . tac stmtnl stmt
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 7

    tac                            shift and go to state 24
    nl                             shift and go to state 19

state 15

    (62) global_sec -> global_sec vardec . nl
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 7

    nl                             shift and go to state 25

state 16

    (63) global_sec -> global_sec nl .

    FUNCS           reduce using rule 63 (global_sec -> global_sec nl .)
    VARNAME         reduce using rule 63 (global_sec -> global_sec nl .)
    NEWLINE         reduce using rule 63 (global_sec -> global_sec nl .)


state 17

    (21) vardec -> VARNAME . SPACES list
    (22) vardec -> VARNAME . STARS SPACES list

    SPACES          shift and go to state 26
    STARS           shift and go to state 27


state 18

    (65) prog -> structs func tac . spnl
    (34) tac -> tac . stmtnl stmt
    (50) spnl -> . space
    (51) spnl -> . nl
    (36) stmtnl -> . NEWLINE
    (1) space -> .
    (2) space -> . SPACES
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 30
    $end            reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    spnl                           shift and go to state 28
    stmtnl                         shift and go to state 29
    space                          shift and go to state 5
    nl                             shift and go to state 4

state 19

    (48) func -> func nl . VARNAME funcparams spnl { spnl funcbody spnl }
    (49) func -> func nl . VARNAME funcparams spnl { spnl }
    (33) tac -> nl . MAINCODE :

    VARNAME         shift and go to state 31
    MAINCODE        shift and go to state 32


state 20

    (61) global_sec -> spnl GLOBALS . : nl

    :               shift and go to state 33


state 21

    (59) structs -> structs VARNAME space . { spnl declist spnl } nl
    (60) structs -> structs VARNAME space . { spnl } nl

    {               shift and go to state 34


state 22

    (47) func -> FUNCS : .

    NEWLINE         reduce using rule 47 (func -> FUNCS : .)


state 23

    (58) structs -> spnl STRT : . nl
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 7

    nl                             shift and go to state 35

state 24

    (64) prog -> structs global_sec func tac . spnl
    (34) tac -> tac . stmtnl stmt
    (50) spnl -> . space
    (51) spnl -> . nl
    (36) stmtnl -> . NEWLINE
    (1) space -> .
    (2) space -> . SPACES
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 30
    $end            reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    spnl                           shift and go to state 36
    stmtnl                         shift and go to state 29
    space                          shift and go to state 5
    nl                             shift and go to state 4

state 25

    (62) global_sec -> global_sec vardec nl .

    FUNCS           reduce using rule 62 (global_sec -> global_sec vardec nl .)
    VARNAME         reduce using rule 62 (global_sec -> global_sec vardec nl .)
    NEWLINE         reduce using rule 62 (global_sec -> global_sec vardec nl .)


state 26

    (21) vardec -> VARNAME SPACES . list
    (52) list -> . VARNAME space
    (53) list -> . list , space VARNAME space

    VARNAME         shift and go to state 37

    list                           shift and go to state 38

state 27

    (22) vardec -> VARNAME STARS . SPACES list

    SPACES          shift and go to state 39


state 28

    (65) prog -> structs func tac spnl .

    $end            reduce using rule 65 (prog -> structs func tac spnl .)


state 29

    (34) tac -> tac stmtnl . stmt
    (23) stmt -> . vardec
    (24) stmt -> . lhs space = space rhs
    (25) stmt -> . VARNAME space = space rhs
    (26) stmt -> . VARNAME space = space MALLOC ( )
    (27) stmt -> . READ SPACES VARNAME
    (28) stmt -> . USE SPACES VARNAME
    (29) stmt -> . GOTO SPACES NUMBER
    (30) stmt -> . CALL SPACES VARNAME funcargs
    (31) stmt -> . IF SPACES boolexp SPACES GOTO SPACES NUMBER
    (32) stmt -> . IF SPACES VARNAME SPACES GOTO SPACES NUMBER
    (21) vardec -> . VARNAME SPACES list
    (22) vardec -> . VARNAME STARS SPACES list
    (13) lhs -> . STARS VARNAME
    (14) lhs -> . VARNAME - > VARNAME
    (15) lhs -> . VARNAME . VARNAME

    VARNAME         shift and go to state 43
    READ            shift and go to state 44
    USE             shift and go to state 45
    GOTO            shift and go to state 46
    CALL            shift and go to state 47
    IF              shift and go to state 48
    STARS           shift and go to state 49

    stmt                           shift and go to state 40
    vardec                         shift and go to state 41
    lhs                            shift and go to state 42

state 30

    (36) stmtnl -> NEWLINE .
    (35) nl -> NEWLINE .

    VARNAME         reduce using rule 36 (stmtnl -> NEWLINE .)
    READ            reduce using rule 36 (stmtnl -> NEWLINE .)
    USE             reduce using rule 36 (stmtnl -> NEWLINE .)
    GOTO            reduce using rule 36 (stmtnl -> NEWLINE .)
    CALL            reduce using rule 36 (stmtnl -> NEWLINE .)
    IF              reduce using rule 36 (stmtnl -> NEWLINE .)
    STARS           reduce using rule 36 (stmtnl -> NEWLINE .)
    $end            reduce using rule 35 (nl -> NEWLINE .)
    }               reduce using rule 35 (nl -> NEWLINE .)


state 31

    (48) func -> func nl VARNAME . funcparams spnl { spnl funcbody spnl }
    (49) func -> func nl VARNAME . funcparams spnl { spnl }
    (45) funcparams -> . ( space )
    (46) funcparams -> . ( space paramlist space )

    (               shift and go to state 51

    funcparams                     shift and go to state 50

state 32

    (33) tac -> nl MAINCODE . :

    :               shift and go to state 52


state 33

    (61) global_sec -> spnl GLOBALS : . nl
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 7

    nl                             shift and go to state 53

state 34

    (59) structs -> structs VARNAME space { . spnl declist spnl } nl
    (60) structs -> structs VARNAME space { . spnl } nl
    (50) spnl -> . space
    (51) spnl -> . nl
    (1) space -> .
    (2) space -> . SPACES
    (35) nl -> . NEWLINE

    }               reduce using rule 1 (space -> .)
    VARNAME         reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6
    NEWLINE         shift and go to state 7

    space                          shift and go to state 5
    spnl                           shift and go to state 54
    nl                             shift and go to state 4

state 35

    (58) structs -> spnl STRT : nl .

    VARNAME         reduce using rule 58 (structs -> spnl STRT : nl .)
    FUNCS           reduce using rule 58 (structs -> spnl STRT : nl .)
    SPACES          reduce using rule 58 (structs -> spnl STRT : nl .)
    NEWLINE         reduce using rule 58 (structs -> spnl STRT : nl .)
    GLOBALS         reduce using rule 58 (structs -> spnl STRT : nl .)


state 36

    (64) prog -> structs global_sec func tac spnl .

    $end            reduce using rule 64 (prog -> structs global_sec func tac spnl .)


state 37

    (52) list -> VARNAME . space
    (1) space -> .
    (2) space -> . SPACES

    ,               reduce using rule 1 (space -> .)
    NEWLINE         reduce using rule 1 (space -> .)
    SPACES          reduce using rule 1 (space -> .)
    $end            reduce using rule 1 (space -> .)
    }               reduce using rule 1 (space -> .)

  ! SPACES          [ shift and go to state 6 ]

    space                          shift and go to state 55

state 38

    (21) vardec -> VARNAME SPACES list .
    (53) list -> list . , space VARNAME space

    NEWLINE         reduce using rule 21 (vardec -> VARNAME SPACES list .)
    SPACES          reduce using rule 21 (vardec -> VARNAME SPACES list .)
    $end            reduce using rule 21 (vardec -> VARNAME SPACES list .)
    }               reduce using rule 21 (vardec -> VARNAME SPACES list .)
    ,               shift and go to state 56


state 39

    (22) vardec -> VARNAME STARS SPACES . list
    (52) list -> . VARNAME space
    (53) list -> . list , space VARNAME space

    VARNAME         shift and go to state 37

    list                           shift and go to state 57

state 40

    (34) tac -> tac stmtnl stmt .

    NEWLINE         reduce using rule 34 (tac -> tac stmtnl stmt .)
    SPACES          reduce using rule 34 (tac -> tac stmtnl stmt .)
    $end            reduce using rule 34 (tac -> tac stmtnl stmt .)


state 41

    (23) stmt -> vardec .

    NEWLINE         reduce using rule 23 (stmt -> vardec .)
    SPACES          reduce using rule 23 (stmt -> vardec .)
    $end            reduce using rule 23 (stmt -> vardec .)
    }               reduce using rule 23 (stmt -> vardec .)


state 42

    (24) stmt -> lhs . space = space rhs
    (1) space -> .
    (2) space -> . SPACES

    =               reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    space                          shift and go to state 58

state 43

    (25) stmt -> VARNAME . space = space rhs
    (26) stmt -> VARNAME . space = space MALLOC ( )
    (21) vardec -> VARNAME . SPACES list
    (22) vardec -> VARNAME . STARS SPACES list
    (14) lhs -> VARNAME . - > VARNAME
    (15) lhs -> VARNAME . . VARNAME
    (1) space -> .
    (2) space -> . SPACES

    SPACES          shift and go to state 60
    STARS           shift and go to state 27
    -               shift and go to state 61
    .               shift and go to state 62
    =               reduce using rule 1 (space -> .)

    space                          shift and go to state 59

state 44

    (27) stmt -> READ . SPACES VARNAME

    SPACES          shift and go to state 63


state 45

    (28) stmt -> USE . SPACES VARNAME

    SPACES          shift and go to state 64


state 46

    (29) stmt -> GOTO . SPACES NUMBER

    SPACES          shift and go to state 65


state 47

    (30) stmt -> CALL . SPACES VARNAME funcargs

    SPACES          shift and go to state 66


state 48

    (31) stmt -> IF . SPACES boolexp SPACES GOTO SPACES NUMBER
    (32) stmt -> IF . SPACES VARNAME SPACES GOTO SPACES NUMBER

    SPACES          shift and go to state 67


state 49

    (13) lhs -> STARS . VARNAME

    VARNAME         shift and go to state 68


state 50

    (48) func -> func nl VARNAME funcparams . spnl { spnl funcbody spnl }
    (49) func -> func nl VARNAME funcparams . spnl { spnl }
    (50) spnl -> . space
    (51) spnl -> . nl
    (1) space -> .
    (2) space -> . SPACES
    (35) nl -> . NEWLINE

    {               reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6
    NEWLINE         shift and go to state 7

    nl                             shift and go to state 4
    spnl                           shift and go to state 69
    space                          shift and go to state 5

state 51

    (45) funcparams -> ( . space )
    (46) funcparams -> ( . space paramlist space )
    (1) space -> .
    (2) space -> . SPACES

    )               reduce using rule 1 (space -> .)
    VARNAME         reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    space                          shift and go to state 70

state 52

    (33) tac -> nl MAINCODE : .

    NEWLINE         reduce using rule 33 (tac -> nl MAINCODE : .)
    SPACES          reduce using rule 33 (tac -> nl MAINCODE : .)
    $end            reduce using rule 33 (tac -> nl MAINCODE : .)


state 53

    (61) global_sec -> spnl GLOBALS : nl .

    FUNCS           reduce using rule 61 (global_sec -> spnl GLOBALS : nl .)
    VARNAME         reduce using rule 61 (global_sec -> spnl GLOBALS : nl .)
    NEWLINE         reduce using rule 61 (global_sec -> spnl GLOBALS : nl .)


state 54

    (59) structs -> structs VARNAME space { spnl . declist spnl } nl
    (60) structs -> structs VARNAME space { spnl . } nl
    (54) declist -> . VARNAME SPACES list
    (55) declist -> . VARNAME STARS SPACES list
    (56) declist -> . declist nl VARNAME SPACES list
    (57) declist -> . declist nl VARNAME STARS SPACES list

    }               shift and go to state 73
    VARNAME         shift and go to state 71

    declist                        shift and go to state 72

state 55

    (52) list -> VARNAME space .

    ,               reduce using rule 52 (list -> VARNAME space .)
    NEWLINE         reduce using rule 52 (list -> VARNAME space .)
    SPACES          reduce using rule 52 (list -> VARNAME space .)
    $end            reduce using rule 52 (list -> VARNAME space .)
    }               reduce using rule 52 (list -> VARNAME space .)


state 56

    (53) list -> list , . space VARNAME space
    (1) space -> .
    (2) space -> . SPACES

    VARNAME         reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    space                          shift and go to state 74

state 57

    (22) vardec -> VARNAME STARS SPACES list .
    (53) list -> list . , space VARNAME space

    NEWLINE         reduce using rule 22 (vardec -> VARNAME STARS SPACES list .)
    SPACES          reduce using rule 22 (vardec -> VARNAME STARS SPACES list .)
    $end            reduce using rule 22 (vardec -> VARNAME STARS SPACES list .)
    }               reduce using rule 22 (vardec -> VARNAME STARS SPACES list .)
    ,               shift and go to state 56


state 58

    (24) stmt -> lhs space . = space rhs

    =               shift and go to state 75


state 59

    (25) stmt -> VARNAME space . = space rhs
    (26) stmt -> VARNAME space . = space MALLOC ( )

    =               shift and go to state 76


state 60

    (21) vardec -> VARNAME SPACES . list
    (2) space -> SPACES .
    (52) list -> . VARNAME space
    (53) list -> . list , space VARNAME space

    =               reduce using rule 2 (space -> SPACES .)
    VARNAME         shift and go to state 37

    list                           shift and go to state 38

state 61

    (14) lhs -> VARNAME - . > VARNAME

    >               shift and go to state 77


state 62

    (15) lhs -> VARNAME . . VARNAME

    VARNAME         shift and go to state 78


state 63

    (27) stmt -> READ SPACES . VARNAME

    VARNAME         shift and go to state 79


state 64

    (28) stmt -> USE SPACES . VARNAME

    VARNAME         shift and go to state 80


state 65

    (29) stmt -> GOTO SPACES . NUMBER

    NUMBER          shift and go to state 81


state 66

    (30) stmt -> CALL SPACES . VARNAME funcargs

    VARNAME         shift and go to state 82


state 67

    (31) stmt -> IF SPACES . boolexp SPACES GOTO SPACES NUMBER
    (32) stmt -> IF SPACES . VARNAME SPACES GOTO SPACES NUMBER
    (9) boolexp -> . VARNAME boolop VARNAME
    (10) boolexp -> . VARNAME boolop NUMBER
    (11) boolexp -> . NUMBER boolop VARNAME
    (12) boolexp -> . NUMBER boolop NUMBER

    VARNAME         shift and go to state 85
    NUMBER          shift and go to state 84

    boolexp                        shift and go to state 83

state 68

    (13) lhs -> STARS VARNAME .

    SPACES          reduce using rule 13 (lhs -> STARS VARNAME .)
    =               reduce using rule 13 (lhs -> STARS VARNAME .)
    NEWLINE         reduce using rule 13 (lhs -> STARS VARNAME .)
    $end            reduce using rule 13 (lhs -> STARS VARNAME .)
    }               reduce using rule 13 (lhs -> STARS VARNAME .)


state 69

    (48) func -> func nl VARNAME funcparams spnl . { spnl funcbody spnl }
    (49) func -> func nl VARNAME funcparams spnl . { spnl }

    {               shift and go to state 86


state 70

    (45) funcparams -> ( space . )
    (46) funcparams -> ( space . paramlist space )
    (43) paramlist -> . VARNAME SPACES VARNAME
    (44) paramlist -> . paramlist space , space VARNAME SPACES VARNAME

    )               shift and go to state 87
    VARNAME         shift and go to state 89

    paramlist                      shift and go to state 88

state 71

    (54) declist -> VARNAME . SPACES list
    (55) declist -> VARNAME . STARS SPACES list

    SPACES          shift and go to state 90
    STARS           shift and go to state 91


state 72

    (59) structs -> structs VARNAME space { spnl declist . spnl } nl
    (56) declist -> declist . nl VARNAME SPACES list
    (57) declist -> declist . nl VARNAME STARS SPACES list
    (50) spnl -> . space
    (51) spnl -> . nl
    (35) nl -> . NEWLINE
    (1) space -> .
    (2) space -> . SPACES

    NEWLINE         shift and go to state 7
    }               reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    space                          shift and go to state 5
    spnl                           shift and go to state 92
    nl                             shift and go to state 93

state 73

    (60) structs -> structs VARNAME space { spnl } . nl
    (35) nl -> . NEWLINE

    NEWLINE         shift and go to state 7

    nl                             shift and go to state 94

state 74

    (53) list -> list , space . VARNAME space

    VARNAME         shift and go to state 95


state 75

    (24) stmt -> lhs space = . space rhs
    (1) space -> .
    (2) space -> . SPACES

    VARNAME         reduce using rule 1 (space -> .)
    &               reduce using rule 1 (space -> .)
    NUMBER          reduce using rule 1 (space -> .)
    STARS           reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    space                          shift and go to state 96

state 76

    (25) stmt -> VARNAME space = . space rhs
    (26) stmt -> VARNAME space = . space MALLOC ( )
    (1) space -> .
    (2) space -> . SPACES

    MALLOC          reduce using rule 1 (space -> .)
    VARNAME         reduce using rule 1 (space -> .)
    &               reduce using rule 1 (space -> .)
    NUMBER          reduce using rule 1 (space -> .)
    STARS           reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    space                          shift and go to state 97

state 77

    (14) lhs -> VARNAME - > . VARNAME

    VARNAME         shift and go to state 98


state 78

    (15) lhs -> VARNAME . VARNAME .

    SPACES          reduce using rule 15 (lhs -> VARNAME . VARNAME .)
    =               reduce using rule 15 (lhs -> VARNAME . VARNAME .)
    NEWLINE         reduce using rule 15 (lhs -> VARNAME . VARNAME .)
    $end            reduce using rule 15 (lhs -> VARNAME . VARNAME .)
    }               reduce using rule 15 (lhs -> VARNAME . VARNAME .)


state 79

    (27) stmt -> READ SPACES VARNAME .

    NEWLINE         reduce using rule 27 (stmt -> READ SPACES VARNAME .)
    SPACES          reduce using rule 27 (stmt -> READ SPACES VARNAME .)
    $end            reduce using rule 27 (stmt -> READ SPACES VARNAME .)
    }               reduce using rule 27 (stmt -> READ SPACES VARNAME .)


state 80

    (28) stmt -> USE SPACES VARNAME .

    NEWLINE         reduce using rule 28 (stmt -> USE SPACES VARNAME .)
    SPACES          reduce using rule 28 (stmt -> USE SPACES VARNAME .)
    $end            reduce using rule 28 (stmt -> USE SPACES VARNAME .)
    }               reduce using rule 28 (stmt -> USE SPACES VARNAME .)


state 81

    (29) stmt -> GOTO SPACES NUMBER .

    NEWLINE         reduce using rule 29 (stmt -> GOTO SPACES NUMBER .)
    SPACES          reduce using rule 29 (stmt -> GOTO SPACES NUMBER .)
    $end            reduce using rule 29 (stmt -> GOTO SPACES NUMBER .)
    }               reduce using rule 29 (stmt -> GOTO SPACES NUMBER .)


state 82

    (30) stmt -> CALL SPACES VARNAME . funcargs
    (41) funcargs -> . ( space )
    (42) funcargs -> . ( space arglist space )

    (               shift and go to state 100

    funcargs                       shift and go to state 99

state 83

    (31) stmt -> IF SPACES boolexp . SPACES GOTO SPACES NUMBER

    SPACES          shift and go to state 101


state 84

    (11) boolexp -> NUMBER . boolop VARNAME
    (12) boolexp -> NUMBER . boolop NUMBER
    (3) boolop -> . space LTE space
    (4) boolop -> . space GTE space
    (5) boolop -> . space < space
    (6) boolop -> . space > space
    (7) boolop -> . space = = space
    (8) boolop -> . space ! = space
    (1) space -> .
    (2) space -> . SPACES

    LTE             reduce using rule 1 (space -> .)
    GTE             reduce using rule 1 (space -> .)
    <               reduce using rule 1 (space -> .)
    >               reduce using rule 1 (space -> .)
    =               reduce using rule 1 (space -> .)
    !               reduce using rule 1 (space -> .)
    SPACES          shift and go to state 6

    boolop                         shift and go to state 102
    space                          shift and go to state 103

state 85

    (32) stmt -> IF SPACES VARNAME . SPACES GOTO SPACES NUMBER
    (9) boolexp -> VARNAME . boolop VARNAME
    (10) boolexp -> VARNAME . boolop NUMBER
    (3) boolop -> . space LTE space
    (4) boolop -> . space GTE space
    (5) boolop -> . space < space
    (6) boolop -> . space > space
    (7) boolop -> . space = = space
    (8) boolop -> . space ! = space
    (1) space -> .
    (2) space -> . SPACES
